// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsCondensedCardTopComponent matches snapshot 1`] = `
<div
  className="usa-grid-full condensed-card-top "
>
  <div
    className="usa-grid-full condensed-card-top-header-container"
  >
    <div
      className="usa-width-one-whole condensed-card-top-header condensed-card-top-header-left"
    >
      <h3>
        OMS (DCM)
      </h3>
       
      <Link
        replace={false}
        to="/details/6"
      >
        View position
      </Link>
    </div>
  </div>
  <div
    className="usa-grid-full post-ribbon-container"
  >
    <div>
      <span>
        <span
          className="title"
        >
          Post:
        </span>
         
        <span
          className="data"
        >
          Freetown, Sierra Leone
        </span>
      </span>
    </div>
    <Flag
      name="flags.bidding"
      render={[Function]}
    />
  </div>
</div>
`;

exports[`ResultsCondensedCardTopComponent matches snapshot when type is serviceNeed 1`] = `
<div
  className="usa-grid-full condensed-card-top card-top-alternate"
>
  <div
    className="usa-grid-full condensed-card-top-header-container"
  >
    <div
      className="usa-width-one-whole condensed-card-top-header condensed-card-top-header-left"
    >
      <span>
        <FontAwesome
          name="bolt"
        />
         
      </span>
      <h3>
        OMS (DCM)
      </h3>
       
      <Link
        replace={false}
        to="/details/6"
      >
        View position
      </Link>
    </div>
  </div>
  <div
    className="usa-grid-full post-ribbon-container"
  >
    <div>
      <span>
        <span
          className="title"
        >
          Post:
        </span>
         
        <span
          className="data"
        >
          Freetown, Sierra Leone
        </span>
      </span>
    </div>
    <Flag
      name="flags.bidding"
      render={[Function]}
    />
  </div>
</div>
`;
